--- a/eats-monolito/eats-restaurante/pom.xml
+++ b/eats-monolito/eats-restaurante/pom.xml
@@ -26,5 +26,11 @@
 			<artifactId>eats-administrativo</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
